# ServiceBotPractice

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lint.sh  main.cpp  report.md  test.sh
example_scripts/: scripts1.sh  scripts2.sh
example_scripts/company/: main.sh
example_scripts/course/: main.sh
example_scripts/echo/: main.sh
example_scripts/regular/: scripts1.sh  scripts2.sh
example_scripts/wait_timeout/: wait.sh
parser/: CMakeLists.txt  ast.cpp  ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  script.cpp  script.hpp  token.cpp  token.hpp
test/: CMakeLists.txt  Paser_Test.cpp  Web_Test.cpp  example-test.cpp  main.cpp
test_message/company/: order  refund
test_message/course/: message  register
test_message/echo/: a
web/: CMakeLists.txt  mainserver.cpp  mainserver.hpp  parallel.cpp  parallel.hpp  qq_type.cpp  qq_type.hpp  runtime.cpp  runtime.hpp  statment.cpp  statment.hpp  testserver.cpp  testserver.hpp
